# huawei-hackathon

./: .gitignore  CMakeLists.txt  README.md  main.cpp  merge.py  output.txt
include/: Packet.hpp  Scheduler.hpp  Slice.hpp
input/: christine.txt  edge.txt  example.txt  example_large.txt  example_late_arrival.txt  large_pack_limBandwit.txt  max_bandwidth_edge.txt  round_robin_fail.txt  single_pack_per_slice.txt  smallPack_HighDelay.txt  unevenPackSize.txt
src/: Packet.cpp  Scheduler.cpp  Slice.cpp
